--- a/VShop.Web/Views/Cart/Index.cshtml
+++ b/VShop.Web/Views/Cart/Index.cshtml
@@ -6,6 +6,7 @@
         <br />
         <input asp-for="CartHeader.UserId" hidden />
         <input asp-for="CartHeader.Id" hidden />
+        <input asp-for="CartItems" hidden />
         <div>
             <div class="card border mt-4 container">
                 <div class="card-header bg-dark text-light ml-0 row">
